[package]
name = "openaddresses"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatgeobuf = "3.26.1"
geozero = { version = "0.10.0" }
walkdir = "2.3.3"

[patch.crates-io]
geozero = { git = "https://github.com/michaelkirk/geozero", branch = "mkirk/line-delimited-geojson" }

